LUCENE-8738: Remove calls to deprecated APIs.