@@ -415,7 +415,7 @@ public class SolrCLI {
     // classpath scanning
 
     for (Class<Tool> next : findToolClassesInPackage("org.apache.solr.util")) {
-      Tool tool = next.newInstance();
+      Tool tool = next.getDeclaredConstructor().newInstance();
       if (toolType.equals(tool.getName()))
         return tool;  
     }
@@ -444,7 +444,7 @@ public class SolrCLI {
 
     List<Class<Tool>> toolClasses = findToolClassesInPackage("org.apache.solr.util");
     for (Class<Tool> next : toolClasses) {
-      Tool tool = next.newInstance();
+      Tool tool = next.getDeclaredConstructor().newInstance();
       formatter.printHelp(tool.getName(), getToolOptions(tool));      
     }    
   }
